--- a/style/main.css
+++ b/style/main.css
@@ -9,9 +9,12 @@
   box-sizing: border-box;
 }
 
+/* elementos base */
+
 body {
   background: var(--black);
   font-family: 'Roboto', sans-serif;
+  color: white;
 }
 
 header  .container{
@@ -37,6 +40,32 @@ header nav a:hover {
   color:#fff;
 }
 
+/* filme principal */
+
+.filme-principal {
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+
+  background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%), url('/img/capa-peaky.jpg');
+  height: 400px;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.filme-principal .descricao {
+  margin-bottom: 2.4rem;
+}
+
+.titulo {
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
+}
+
+/* media queries */
 @media (max-width: 1080px) {
   html {
     font-size: 93.75%;
