--- a/style/main.css
+++ b/style/main.css
@@ -47,7 +47,7 @@ header nav a:hover {
   line-height: 1.4rem;
 
   background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%), url('/img/capa-peaky.jpg');
-  height: 400px;
+  height: 500px;
   background-size: cover;
 
   display: flex;
@@ -58,11 +58,39 @@ header nav a:hover {
 
 .filme-principal .descricao {
   margin-bottom: 2.4rem;
+  margin-top: 1rem;
 }
 
 .titulo {
   font-size: 2.4rem;
-  margin-bottom: 1rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-transform: uppercase;
+
+  margin-top: 12%;
+}
+
+.botao {
+  background-color: rgba(0, 0, 0, .50);
+  border: none;
+  border-radius: 4px;
+  color: white;
+
+  padding: 1.2rem;
+  margin-right: 0.8rem;
+
+  font-size: 1rem;
+  font-weight: 700;
+
+  transition: .3s ease all;
+}
+
+.botao:hover {
+  background-color: white;
+  color: black;
+}
+
+button {
+  cursor: pointer;
 }
 
 /* media queries */
