--- a/style/main.css
+++ b/style/main.css
@@ -21,7 +21,7 @@ header  .container{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 0.8rem; 
+  flex-direction: row;
 }
 
 header  .logo{
@@ -43,11 +43,10 @@ header nav a:hover {
 /* filme principal */
 
 .filme-principal {
-  font-size: 1.2rem;
   line-height: 1.4rem;
 
   background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%), url('/img/capa-peaky.jpg');
-  height: 500px;
+  height: 650px;
   background-size: cover;
 
   display: flex;
@@ -56,9 +55,19 @@ header nav a:hover {
   align-items: flex-start;
 }
 
+.container {
+  margin-left: 20px;
+}
+
+.filme-principal .container {
+  width: 45vw;
+}
+
 .filme-principal .descricao {
   margin-bottom: 2.4rem;
   margin-top: 1rem;
+
+  font-size: 1rem;
 }
 
 .titulo {
@@ -87,6 +96,10 @@ header nav a:hover {
 .botao:hover {
   background-color: white;
   color: black;
+}
+
+.botao i {
+  margin-right: 0.5rem;
 }
 
 button {
