--- a/style/main.css
+++ b/style/main.css
@@ -55,14 +55,6 @@ header nav a:hover {
   align-items: flex-start;
 }
 
-.container {
-  margin-left: 20px;
-}
-
-.filme-principal .container {
-  width: 45vw;
-}
-
 .filme-principal .descricao {
   margin-bottom: 2.4rem;
   margin-top: 1rem;
@@ -104,6 +96,20 @@ header nav a:hover {
 
 button {
   cursor: pointer;
+}
+
+.container {
+  margin-left: 20px;
+}
+
+.filme-principal .container {
+  width: 45vw;
+}
+
+.box-filme {
+  height: 100%;
+  width: 100%;
+  display: block;
 }
 
 /* media queries */
